fixed textarea and inputs on mobile, added portrait map to mobile, compressed images, fixed navbar overflow on mobile, changed navbar height on landscape mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -535,6 +535,7 @@ nav {
       border: none;
       box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.24);
       border-radius: 0.5rem;
+      padding: 1rem 1rem;
     }
 
     .btn1 {
@@ -545,6 +546,15 @@ nav {
 }
 
 #map {
+  img{
+    display: none;
+    &:first-child{
+      display:block;
+    }
+    
+    height:100%;
+    width:100%;
+  }
   width: 100%;
   height: 100%;
   display: flex;
